--- a/charts/ai-software-templates/triggers-vs-pac/templates/app-rbac.yaml
+++ b/charts/ai-software-templates/triggers-vs-pac/templates/app-rbac.yaml
@@ -15,6 +15,14 @@ rules:
   - apiGroups: ["tekton.dev"]
     resources: ["tasks", "pipelines"]
     verbs: ["get", "create", "patch", "update", "delete"]
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - create
+      - patch
+      - update
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
